--- a/public/login.html
+++ b/public/login.html
@@ -69,7 +69,7 @@
       const password = document.getElementById("loginPassword").value;
 
       try {
-        const res = await fetch("http://localhost:5000/api/auth/login", {
+        const res = await fetch("https://robolearn.onrender.com/api/auth/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, password }),
@@ -77,7 +77,7 @@
 
         const data = await res.json();
         if (res.ok) {
-          message.textContent = "✅ " + data.message;
+          message.textContent =data.message;
           message.classList.remove("text-red-500");
           message.classList.add("text-green-500");
 
@@ -88,12 +88,12 @@
             window.location.href = "home.html";
           }, 1000);
         } else {
-          message.textContent = "❌ " + data.message;
+          message.textContent = data.message;
           message.classList.remove("text-green-500");
           message.classList.add("text-red-500");
         }
       } catch (err) {
-        message.textContent = "❌ Server error";
+        message.textContent = " Server error";
       }
     });
 
@@ -104,7 +104,7 @@
       const password = document.getElementById("registerPassword").value;
 
       try {
-        const res = await fetch("http://localhost:5000/api/auth/register", {
+        const res = await fetch("https://robolearn.onrender.com/api/auth/register", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ name, email, password }),
@@ -127,3 +127,4 @@
   </script>
 </body>
 </html>
+
